Added PIK air temperature parameterization based on Huybreachts & De Wolde 1999 with adjusted parameters from analysis of ERA Interim data

--- a/src/coupler/CMakeLists.txt
+++ b/src/coupler/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Boundary models (surface, atmosphere, ocean).
 add_library (pismboundary OBJECT
   ./PISMAtmosphere.cc
+  ./atmosphere/PATemperaturePIK.cc
   ./atmosphere/PAConstantPIK.cc
   ./atmosphere/PASeariseGreenland.cc
   ./atmosphere/PAYearlyCycle.cc
